--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -17,73 +17,59 @@ jobs:
 
       - name: Install Swift for Windows
         run: |
-          # Install Chocolatey first
-          Set-ExecutionPolicy Bypass -Scope Process -Force
-          [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
-          iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+          Write-Host "Installing Swift for Windows..."
 
-          # Try to install Swift via Chocolatey
-          try {
-            Write-Host "Attempting to install Swift via Chocolatey..."
-            choco install swift -y
-            $env:PATH += ";C:\swift\bin"
-            Write-Host "Swift installed via Chocolatey"
+          # Try different Swift download URLs
+          $swiftUrls = @(
+            "https://github.com/apple/swift/releases/download/swift-5.10.1-release/swift-5.10.1-RELEASE-windows10.exe",
+            "https://github.com/apple/swift/releases/download/swift-5.10.0-release/swift-5.10.0-RELEASE-windows10.exe",
+            "https://github.com/apple/swift/releases/download/swift-5.9.2-release/swift-5.9.2-RELEASE-windows10.exe"
+          )
+
+          $success = $false
+          foreach ($url in $swiftUrls) {
+            try {
+              Write-Host "Trying Swift installer: $url"
+              Invoke-WebRequest -Uri $url -OutFile "swift-installer.exe" -UseBasicParsing
+              Start-Process -FilePath "swift-installer.exe" -ArgumentList "/S" -Wait
+              Remove-Item "swift-installer.exe"
+              $success = $true
+              Write-Host "Successfully installed Swift from: $url"
+              break
+            }
+            catch {
+              Write-Host "Failed to download from: $url"
+              Write-Host "Error: $($_.Exception.Message)"
+            }
           }
-          catch {
-            Write-Host "Chocolatey installation failed, trying manual download..."
 
-            # Manual download approach - try different sources
-            $swiftUrls = @(
-              "https://github.com/apple/swift/releases/download/swift-5.10.1-release/swift-5.10.1-RELEASE-windows10.exe",
-              "https://github.com/apple/swift/releases/download/swift-5.10.0-release/swift-5.10.0-RELEASE-windows10.exe",
-              "https://github.com/apple/swift/releases/download/swift-5.9.2-release/swift-5.9.2-RELEASE-windows10.exe"
+          if (-not $success) {
+            Write-Host "All download attempts failed. Installing Swift manually..."
+
+            # Create Swift directory and download components manually
+            New-Item -ItemType Directory -Force -Path "C:\swift"
+            New-Item -ItemType Directory -Force -Path "C:\swift\bin"
+
+            # Download Swift toolchain components
+            $components = @(
+              "swift.exe",
+              "swiftc.exe",
+              "swift-driver.exe"
             )
 
-            $success = $false
-            foreach ($url in $swiftUrls) {
+            foreach ($component in $components) {
               try {
-                Write-Host "Trying Swift installer: $url"
-                Invoke-WebRequest -Uri $url -OutFile "swift-installer.exe" -UseBasicParsing
-                Start-Process -FilePath "swift-installer.exe" -ArgumentList "/S" -Wait
-                Remove-Item "swift-installer.exe"
-                $success = $true
-                Write-Host "Successfully installed Swift from: $url"
-                break
+                $url = "https://github.com/apple/swift/releases/download/swift-5.10.1-release/$component"
+                Invoke-WebRequest -Uri $url -OutFile "C:\swift\bin\$component" -UseBasicParsing
+                Write-Host "Downloaded $component"
               }
               catch {
-                Write-Host "Failed to download from: $url"
-                Write-Host "Error: $($_.Exception.Message)"
+                Write-Host "Failed to download $component"
               }
-            }
-
-            if (-not $success) {
-              Write-Host "All download attempts failed. Installing Swift manually..."
-
-              # Create Swift directory and download components manually
-              New-Item -ItemType Directory -Force -Path "C:\swift"
-              New-Item -ItemType Directory -Force -Path "C:\swift\bin"
-
-              # Download Swift toolchain components
-              $components = @(
-                "swift.exe",
-                "swiftc.exe",
-                "swift-driver.exe"
-              )
-
-              foreach ($component in $components) {
-                try {
-                  $url = "https://github.com/apple/swift/releases/download/swift-5.10.1-release/$component"
-                  Invoke-WebRequest -Uri $url -OutFile "C:\swift\bin\$component" -UseBasicParsing
-                  Write-Host "Downloaded $component"
-                }
-                catch {
-                  Write-Host "Failed to download $component"
-                }
-              }
-
-              $env:PATH += ";C:\swift\bin"
             }
           }
+
+          $env:PATH += ";C:\swift\bin"
 
       - name: Install zlib
         run: |
@@ -137,73 +123,59 @@ jobs:
 
       - name: Install Swift for Windows
         run: |
-          # Install Chocolatey first
-          Set-ExecutionPolicy Bypass -Scope Process -Force
-          [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
-          iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+          Write-Host "Installing Swift for Windows..."
 
-          # Try to install Swift via Chocolatey
-          try {
-            Write-Host "Attempting to install Swift via Chocolatey..."
-            choco install swift -y
-            $env:PATH += ";C:\swift\bin"
-            Write-Host "Swift installed via Chocolatey"
+          # Try different Swift download URLs
+          $swiftUrls = @(
+            "https://github.com/apple/swift/releases/download/swift-5.10.1-release/swift-5.10.1-RELEASE-windows10.exe",
+            "https://github.com/apple/swift/releases/download/swift-5.10.0-release/swift-5.10.0-RELEASE-windows10.exe",
+            "https://github.com/apple/swift/releases/download/swift-5.9.2-release/swift-5.9.2-RELEASE-windows10.exe"
+          )
+
+          $success = $false
+          foreach ($url in $swiftUrls) {
+            try {
+              Write-Host "Trying Swift installer: $url"
+              Invoke-WebRequest -Uri $url -OutFile "swift-installer.exe" -UseBasicParsing
+              Start-Process -FilePath "swift-installer.exe" -ArgumentList "/S" -Wait
+              Remove-Item "swift-installer.exe"
+              $success = $true
+              Write-Host "Successfully installed Swift from: $url"
+              break
+            }
+            catch {
+              Write-Host "Failed to download from: $url"
+              Write-Host "Error: $($_.Exception.Message)"
+            }
           }
-          catch {
-            Write-Host "Chocolatey installation failed, trying manual download..."
 
-            # Manual download approach - try different sources
-            $swiftUrls = @(
-              "https://github.com/apple/swift/releases/download/swift-5.10.1-release/swift-5.10.1-RELEASE-windows10.exe",
-              "https://github.com/apple/swift/releases/download/swift-5.10.0-release/swift-5.10.0-RELEASE-windows10.exe",
-              "https://github.com/apple/swift/releases/download/swift-5.9.2-release/swift-5.9.2-RELEASE-windows10.exe"
+          if (-not $success) {
+            Write-Host "All download attempts failed. Installing Swift manually..."
+
+            # Create Swift directory and download components manually
+            New-Item -ItemType Directory -Force -Path "C:\swift"
+            New-Item -ItemType Directory -Force -Path "C:\swift\bin"
+
+            # Download Swift toolchain components
+            $components = @(
+              "swift.exe",
+              "swiftc.exe",
+              "swift-driver.exe"
             )
 
-            $success = $false
-            foreach ($url in $swiftUrls) {
+            foreach ($component in $components) {
               try {
-                Write-Host "Trying Swift installer: $url"
-                Invoke-WebRequest -Uri $url -OutFile "swift-installer.exe" -UseBasicParsing
-                Start-Process -FilePath "swift-installer.exe" -ArgumentList "/S" -Wait
-                Remove-Item "swift-installer.exe"
-                $success = $true
-                Write-Host "Successfully installed Swift from: $url"
-                break
+                $url = "https://github.com/apple/swift/releases/download/swift-5.10.1-release/$component"
+                Invoke-WebRequest -Uri $url -OutFile "C:\swift\bin\$component" -UseBasicParsing
+                Write-Host "Downloaded $component"
               }
               catch {
-                Write-Host "Failed to download from: $url"
-                Write-Host "Error: $($_.Exception.Message)"
+                Write-Host "Failed to download $component"
               }
-            }
-
-            if (-not $success) {
-              Write-Host "All download attempts failed. Installing Swift manually..."
-
-              # Create Swift directory and download components manually
-              New-Item -ItemType Directory -Force -Path "C:\swift"
-              New-Item -ItemType Directory -Force -Path "C:\swift\bin"
-
-              # Download Swift toolchain components
-              $components = @(
-                "swift.exe",
-                "swiftc.exe",
-                "swift-driver.exe"
-              )
-
-              foreach ($component in $components) {
-                try {
-                  $url = "https://github.com/apple/swift/releases/download/swift-5.10.1-release/$component"
-                  Invoke-WebRequest -Uri $url -OutFile "C:\swift\bin\$component" -UseBasicParsing
-                  Write-Host "Downloaded $component"
-                }
-                catch {
-                  Write-Host "Failed to download $component"
-                }
-              }
-
-              $env:PATH += ";C:\swift\bin"
             }
           }
+
+          $env:PATH += ";C:\swift\bin"
 
       - name: Install zlib
         run: |
@@ -237,73 +209,59 @@ jobs:
 
       - name: Install Swift for Windows
         run: |
-          # Install Chocolatey first
-          Set-ExecutionPolicy Bypass -Scope Process -Force
-          [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
-          iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+          Write-Host "Installing Swift for Windows..."
 
-          # Try to install Swift via Chocolatey
-          try {
-            Write-Host "Attempting to install Swift via Chocolatey..."
-            choco install swift -y
-            $env:PATH += ";C:\swift\bin"
-            Write-Host "Swift installed via Chocolatey"
+          # Try different Swift download URLs
+          $swiftUrls = @(
+            "https://github.com/apple/swift/releases/download/swift-5.10.1-release/swift-5.10.1-RELEASE-windows10.exe",
+            "https://github.com/apple/swift/releases/download/swift-5.10.0-release/swift-5.10.0-RELEASE-windows10.exe",
+            "https://github.com/apple/swift/releases/download/swift-5.9.2-release/swift-5.9.2-RELEASE-windows10.exe"
+          )
+
+          $success = $false
+          foreach ($url in $swiftUrls) {
+            try {
+              Write-Host "Trying Swift installer: $url"
+              Invoke-WebRequest -Uri $url -OutFile "swift-installer.exe" -UseBasicParsing
+              Start-Process -FilePath "swift-installer.exe" -ArgumentList "/S" -Wait
+              Remove-Item "swift-installer.exe"
+              $success = $true
+              Write-Host "Successfully installed Swift from: $url"
+              break
+            }
+            catch {
+              Write-Host "Failed to download from: $url"
+              Write-Host "Error: $($_.Exception.Message)"
+            }
           }
-          catch {
-            Write-Host "Chocolatey installation failed, trying manual download..."
 
-            # Manual download approach - try different sources
-            $swiftUrls = @(
-              "https://github.com/apple/swift/releases/download/swift-5.10.1-release/swift-5.10.1-RELEASE-windows10.exe",
-              "https://github.com/apple/swift/releases/download/swift-5.10.0-release/swift-5.10.0-RELEASE-windows10.exe",
-              "https://github.com/apple/swift/releases/download/swift-5.9.2-release/swift-5.9.2-RELEASE-windows10.exe"
+          if (-not $success) {
+            Write-Host "All download attempts failed. Installing Swift manually..."
+
+            # Create Swift directory and download components manually
+            New-Item -ItemType Directory -Force -Path "C:\swift"
+            New-Item -ItemType Directory -Force -Path "C:\swift\bin"
+
+            # Download Swift toolchain components
+            $components = @(
+              "swift.exe",
+              "swiftc.exe",
+              "swift-driver.exe"
             )
 
-            $success = $false
-            foreach ($url in $swiftUrls) {
+            foreach ($component in $components) {
               try {
-                Write-Host "Trying Swift installer: $url"
-                Invoke-WebRequest -Uri $url -OutFile "swift-installer.exe" -UseBasicParsing
-                Start-Process -FilePath "swift-installer.exe" -ArgumentList "/S" -Wait
-                Remove-Item "swift-installer.exe"
-                $success = $true
-                Write-Host "Successfully installed Swift from: $url"
-                break
+                $url = "https://github.com/apple/swift/releases/download/swift-5.10.1-release/$component"
+                Invoke-WebRequest -Uri $url -OutFile "C:\swift\bin\$component" -UseBasicParsing
+                Write-Host "Downloaded $component"
               }
               catch {
-                Write-Host "Failed to download from: $url"
-                Write-Host "Error: $($_.Exception.Message)"
+                Write-Host "Failed to download $component"
               }
-            }
-
-            if (-not $success) {
-              Write-Host "All download attempts failed. Installing Swift manually..."
-
-              # Create Swift directory and download components manually
-              New-Item -ItemType Directory -Force -Path "C:\swift"
-              New-Item -ItemType Directory -Force -Path "C:\swift\bin"
-
-              # Download Swift toolchain components
-              $components = @(
-                "swift.exe",
-                "swiftc.exe",
-                "swift-driver.exe"
-              )
-
-              foreach ($component in $components) {
-                try {
-                  $url = "https://github.com/apple/swift/releases/download/swift-5.10.1-release/$component"
-                  Invoke-WebRequest -Uri $url -OutFile "C:\swift\bin\$component" -UseBasicParsing
-                  Write-Host "Downloaded $component"
-                }
-                catch {
-                  Write-Host "Failed to download $component"
-                }
-              }
-
-              $env:PATH += ";C:\swift\bin"
             }
           }
+
+          $env:PATH += ";C:\swift\bin"
 
       - name: Install zlib
         run: |
