--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -8,50 +8,44 @@ on:
 
 jobs:
   test-windows:
-    name: Windows (Windows Server 2022, Swift via WinGet)
+    name: Windows (Swift 5.10.1 via Docker)
     runs-on: windows-2022
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Visual Studio 2022 Community
-        run: |
-          winget install --id Microsoft.VisualStudio.2022.Community --exact --force --custom "--add Microsoft.VisualStudio.Component.Windows11SDK.22000 --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.VC.Tools.ARM64"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Install Swift Toolchain
+      - name: Install zlib in Docker container
         run: |
-          winget install --id Swift.Toolchain -e
-
-      - name: Install zlib
-        run: |
-          # Install vcpkg
-          git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
-          C:\vcpkg\bootstrap-vcpkg.bat
-
-          # Install zlib
-          C:\vcpkg\vcpkg install zlib:x64-windows
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 powershell -Command "& { choco install zlib -y }"
 
       - name: Show Swift version
-        run: swift --version
+        run: |
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift --version
 
       - name: Build package
-        run: swift build
+        run: |
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift build
 
       - name: Run all tests
-        run: swift test --verbose
+        run: |
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test --verbose
 
       - name: Run specific test groups
         run: |
-          swift test --filter CoreTests
-          swift test --filter ExtensionsTests
-          swift test --filter FileOperationsTests
-          swift test --filter ErrorHandlingTests
-          swift test --filter StreamingTests
-          swift test --filter ConcurrencyTests
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test --filter CoreTests
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test --filter ExtensionsTests
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test --filter FileOperationsTests
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test --filter ErrorHandlingTests
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test --filter StreamingTests
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test --filter ConcurrencyTests
 
       - name: Build CLI tool
-        run: swift build --product SwiftZlibCLI
+        run: |
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift build --product SwiftZlibCLI
 
   # Build verification - Windows
   build-verification-windows:
@@ -64,28 +58,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Visual Studio 2022 Community
-        run: |
-          winget install --id Microsoft.VisualStudio.2022.Community --exact --force --custom "--add Microsoft.VisualStudio.Component.Windows11SDK.22000 --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.VC.Tools.ARM64"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Install Swift Toolchain
+      - name: Install zlib in Docker container
         run: |
-          winget install --id Swift.Toolchain -e
-
-      - name: Install zlib
-        run: |
-          git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
-          C:\vcpkg\bootstrap-vcpkg.bat
-          C:\vcpkg\vcpkg install zlib:x64-windows
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 powershell -Command "& { choco install zlib -y }"
 
       - name: Build package
-        run: swift build -c ${{ matrix.configuration }}
+        run: |
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift build -c ${{ matrix.configuration }}
 
       - name: Test package
-        run: swift test -c ${{ matrix.configuration }}
+        run: |
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test -c ${{ matrix.configuration }}
 
       - name: Build CLI tool
-        run: swift build -c ${{ matrix.configuration }} --product SwiftZlibCLI
+        run: |
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift build -c ${{ matrix.configuration }} --product SwiftZlibCLI
 
   # Performance benchmarks - Windows
   benchmark-windows:
@@ -96,23 +86,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Visual Studio 2022 Community
-        run: |
-          winget install --id Microsoft.VisualStudio.2022.Community --exact --force --custom "--add Microsoft.VisualStudio.Component.Windows11SDK.22000 --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.VC.Tools.ARM64"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Install Swift Toolchain
+      - name: Install zlib in Docker container
         run: |
-          winget install --id Swift.Toolchain -e
-
-      - name: Install zlib
-        run: |
-          git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
-          C:\vcpkg\bootstrap-vcpkg.bat
-          C:\vcpkg\vcpkg install zlib:x64-windows
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 powershell -Command "& { choco install zlib -y }"
 
       - name: Run performance tests
         run: |
-          swift test --filter PerformanceTests --verbose
-          swift test --filter "testCompressionPerformance" --verbose
-          swift test --filter "testDecompressionPerformance" --verbose
-          swift test --filter "testMemoryEfficiency" --verbose
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test --filter PerformanceTests --verbose
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test --filter "testCompressionPerformance" --verbose
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test --filter "testDecompressionPerformance" --verbose
+          docker run --rm -v ${PWD}:/workspace -w /workspace swift:5.10.1-windowsservercore-ltsc2022 swift test --filter "testMemoryEfficiency" --verbose
