--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Convert workspace path for Docker
         id: vars
         run: |
-          echo "DOCKER_WORKSPACE=$(echo ${GITHUB_WORKSPACE} | sed 's/\\\\/\//g')" >> $GITHUB_ENV
-        shell: bash
+          echo "DOCKER_WORKSPACE=${env:GITHUB_WORKSPACE -replace '\\','/'}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        shell: pwsh
 
       - name: Install zlib in Docker container
         run: |
@@ -64,8 +64,8 @@ jobs:
       - name: Convert workspace path for Docker
         id: vars
         run: |
-          echo "DOCKER_WORKSPACE=$(echo ${GITHUB_WORKSPACE} | sed 's/\\\\/\//g')" >> $GITHUB_ENV
-        shell: bash
+          echo "DOCKER_WORKSPACE=${env:GITHUB_WORKSPACE -replace '\\','/'}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        shell: pwsh
 
       - name: Install zlib in Docker container
         run: |
@@ -95,8 +95,8 @@ jobs:
       - name: Convert workspace path for Docker
         id: vars
         run: |
-          echo "DOCKER_WORKSPACE=$(echo ${GITHUB_WORKSPACE} | sed 's/\\\\/\//g')" >> $GITHUB_ENV
-        shell: bash
+          echo "DOCKER_WORKSPACE=${env:GITHUB_WORKSPACE -replace '\\','/'}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        shell: pwsh
 
       - name: Install zlib in Docker container
         run: |
